[package]
name = "gfx"
version = "0.1.0"
edition = "2021"

[dependencies]
cfg-if = "1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
pollster = "0.3"
bytemuck = { version = "1.21.0", features = ["derive"] }
anyhow = "1.0.95"
cgmath = "0.18.0"
egui-wgpu = "0.27.2"
egui = "0.27.2"
egui-winit = "0.27.2"
egui_plot = "0.30.0"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png"]
